@@ -742,6 +742,132 @@
                 tag_inv_guestpass: "Gastenpas",
                 tag_friends_want: "<a href=\"http://steamcommunity.com/my/friendsthatplay/__appid__\">__friendcount__ willen dit</a>"
             },
+			"po": {
+				empty_wishlist: "Opróznij liste zyczen",
+				purchase_date: "(Zakupiono __date__)",
+				options: "Opcje",
+				website: "Strona WWW",
+				contribute: "Contribute (GitHub)",
+				official_group: "Oficjalna grupa",
+				official_group_url: "steamcommunity.com/groups/enhancedsteam",
+				store: "Sklep",
+				library_menu: "Biblioteka",
+				community: "Spolecznosc",
+				news: "Aktualnosci",
+				about: "O dodatku",
+				donate: "Datki",
+				language: "Jezyk",
+				highlight: "Podswietlenie",
+				options_owned: "Tytuly posiadane",
+				options_wishlist: "Tytuly na liscie zyczen",
+				options_coupon: "Tytuly z kuponami",
+				options_gift: "Tytuly w postaci prezentów",
+				options_guest: "Tytuly w postaci kluczy tymczasowych",
+				options_friends_wishlist: "Tytuly z listy zyczen przyjaciól",
+				options_excludef2p: "Nie podswietlaj darmowych gier",
+				options_friends_own: "Tytuly posiadane przez przyjaciól",
+				options_friends_rec: "Tytuly polecane przez przyjaciól",
+				options_hide_early_access: "Tytuly z wczesnym dostepem w nowosciach",
+				options_hide_install: "Ukryj \"Install Steam\ button",
+				options_send_age_info: "Automatycznie podaj wiek na zadanie",
+				options_contscroll: "Wlacz kontynuacje przewijania wyników wyszukiwania",
+				options_drm: "Pokaz informacje o dodatkowych DRM stron trzecich",
+				options_lowestprice: "Pokaz informacje o historii cen",
+				options_metacritic: "Pokaz ocene uzytkowników Metacritic",
+				options_hltb: "Pokaz informacje z HowLongToBeat.com",
+				options_steamdb: "Pokaz linki SteamDB",
+				options_wsgf: "Pokaz informacje WSGF (dot. szerokich ekranów)",
+				options_carousel_description: "Pokaz opisy na karuzeli sklepu Steam",
+				options_profile_links: "Pokaz linki do profili:",
+				options_total_spent: "Pokaz \"Total Spent\ on Account Page",
+				options_group_events: "Pokaz wydarzenia w podgladzie Grupy",
+				options_greenlight_banner: "Zmien banner Greenlight",
+				options_hideactivelistings: "Domyslnie ukryj moje aktywne przedmioty na stronie Rynku",
+				options_steamcardexchange: "Pokaz linki do SteamCardExchange na odznakach",
+				options_es_bg: "Ustaw wlasne tlo na Ekranie Edycji Profilu",
+				options_showallachievements: "Pokaz dane osiagniec na \"All Games\ page",
+				options_market_total: "Pokaz podsumowanie transakcji na Rynku",
+				options_library: "Pokaz przycisk Biblioteka w naglówku (BETA)",
+				options_library_f2p: "Pokaz darmowe gry i dema w Bibliotece jesli w nie grales",
+				options_hide_about: "Ukryj link O Steam",
+				options_hide_new_heading: "Ukryj \"NEW\ over username",
+				options_replace_account_name: "Uzyj nazwy spolecznosciowej zamiast nazwy konta",
+				options_show_regionwarning: "Pokaz ostrzezenie o przegladaniu niewlasciwego regionu",
+				options_about_text: "O <a href='http://www.enhancedsteam.com' style='color:#8bc53f;'>Enhanced Steam</a>:<p>Enhanced Steam to rozszerzenie dla Google Chrome, które dodaje wiele usprawnien do strony Steam.<p>Wybrane mozliwosci:<ul><li>Podswietlanie posiadanych gier</li><li>Podswietlanie gier z listy zyczen</li><li>Prawidlowe obliczanie znizek bundlowych na podstawie posiadanych gier</li><li>Pokazywanie kwoty wydanej na Steam od zalozenia konta</li><li>Podswietlanie posiadanych DLC na stronie gry</li><li>Poprawka bledu \"Brak Obrazu\dla gier i DLC</li><li>Ostrzeganie o dodatkowych DRM</li></ul><p>Jesli uwazasz to rozszerzenie za przydatne, rozwaz mozliwosc datku.",
+				tag: "Tag",
+				theworddefault: "Domyslny",
+				save: "Zapisz",
+				saved: "Zapisano",
+				remove: "Usun",
+				view_in: "Pokaz w",
+				clear_cache: "Wyczysc pamiec podreczna",
+				forums: "Forum",
+				games: "Gry",
+				compare: "Porównaj",
+				coupon_available: "Posiadasz kupon!",
+				coupon_application_note: "Kupon z twojego ekwipunku zostanie automatycznie zastosowany.",
+				coupon_learn_more: "<a href=\"https://support.steampowered.com/kb_article.php?ref=4210-YIPC-0275\">Wiecej</a> o Kuponach Steam",
+				add_to_cart: "Dodaj do koszyka",
+				add_unowned_dlc_to_cart: "Dodaj nie posiadane DLC do koszyka",
+				drm_third_party: "Uwaga! Ten tytul zawiera DRM stron trzecich",
+				empty_cart: "Opróznij kosz",
+				events_view_all: "POKAZ WSZYSTKO",
+				events: "Wydarzenia",
+				dlc_data_header: "Informacja o zawartosci do pobrania",
+				tag_owned: "Posiadane",
+				tag_wishlist: "Lista zyczen",
+				tag_coupon: "Kupon",
+				tag_inv_gift: "Prezent",
+				tag_inv_guestpass: "Klucz tymczasowy",
+				tag_friends_want: "<a href=\"http://steamcommunity.com/my/friendsthatplay/__appid__\">__friendcount__ chce</a>",
+				tag_friends_own: "__friendcount__ posiada",
+				tag_friends_rec: "<a href=\"http://store.steampowered.com/recommended/byfriends/__appid__\>__friendcount__ poleca</a>",
+				inventory_market_text: "Pokaz ceny Rynkowe na stronie Ekwipunku (eksperymentalne)",
+				credits: "Autorzy",
+				stores: "Sklepy",
+				all: "Wszystkie",
+				programming: "Programowanie",
+				translation: "Tlumaczenie",
+				custom_background: "Wlasne tlo",
+				custom_background_help: "Wszyscy uzytkownicy Enhanced Steam zobacza to tlo w twoim profilu. Pozostali zobacza zwykle tlo profilu.",
+				total_size: "Calkowity rozmiar",
+				hide: "Ukryj",
+				show: "Pokaz",
+				view: "Zobacz",
+				buy: "Kup",
+				store_transactions: "Transakcje w Sklepie",
+				game_transactions: "Transakcje dot. gier",
+				market_transactions: "Transakcje na Rynku",
+				total_spent: "W sumie wydano",
+				historical_low: "Historycznie najnizsza cena",
+				lowest_price: "Najnizsza cena",
+				card_drops_remaining: "__drops__ card kart do wygenerowania",
+				games_with_drops: "__dropsgames__ gier wygeneruje karty",
+				games_with_booster: "__boostergames__ gier moze wygenerowac pakiety kart",
+				badges_all: "Wszystkie odznaki",
+				games_all: "Wszystkie gry",
+				games_discount: "Gry ze znizkami",
+				badges_drops: "Odznaki gier, które wygeneruja karty",
+				binder_view: "Widok skoroszytu",
+				sales_total: "Wartosc sprzedazy",
+				purchase_total: "Wartosc zakupów",
+				net_gain: "Dochód netto",
+				net_spent: "Strata netto",
+				loading: "Ladowanie...",
+				using_store: "Uzywasz sklepu Steam dla regionu __current__.",
+				using_store_return: "Kliknij, aby powrócic do sklepu __base__.",
+				library: {
+					private_profile: "Zmien profil na publiczny <a href='http://steamcommunity.com/my/edit/settings'>w ustawieniach</a> aby z tego korzystac."
+				},
+				bundle: {
+					info: "Informacja o bundlach",
+					offer_ends: "Oferta wygasa",
+					pwyw: "Zaplac ile chcesz",
+					includes: "Zawiera (__num__) tytulów",
+					header: "Bundle zawierajace te gre",
+					bundle_count: "Ile razy gra ukazala sie w bundlu"
+				}
+			},
             "pt-br": {
                 empty_wishlist: "Limpar Lista de Desejos",
                 purchase_date: "(Comprado __date__)",
