@@ -47,7 +47,7 @@
 						<option value="ko">한국어</option>
 						<option value="nl">Nederlands</option>
 						<option value="no">Norsk (bokmål)</option>
-						<option value="pl">Polski</option>
+						<option value="po">Polski</option>
 						<option value="pt">Português</option>
 						<option value="pt-br">Português do Brasil</option>
 						<option value="ro">Română</option>
@@ -893,6 +893,17 @@
 				</td>
 				<td>
 					<div class="text">Bin Dong</div>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					&nbsp;&nbsp;
+				</td>
+				<td height=30>
+					<div class="text">Polish</div>
+				</td>
+				<td>
+					<div class="text">mrmahon</div>
 				</td>
 			</tr>
 		
